# gl-playground

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
include/: Test.h
res/shaders/: Flat.shader
scripts/: build.sh  clean.sh
src/: Assert.cpp  Assert.h  IndexBuffer.cpp  IndexBuffer.h  IndexBuffer.hpp  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.hpp  VertexBufferLayout.h  VertexBufferLayout.hpp  main.cpp
src/data/: CubeData.h
src/renderer/: Renderer.cpp  Renderer.hpp
